--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,11 @@
 spring.application.name=dateSphire-ai-backend
-spring.ai.openai.api-key=sk-proj-QRhH7OyCWU0BxzVaNXLiT3BlbkFJRR0Fi9xPWMvNZHgJWdzX
-spring.ai.openai.chat.options.model=gpt-3.5-turbo
-spring.ai.openai.chat.options.temperature=0.7
+#spring.ai.openai.api-key=sk-proj-QRhH7OyCWU0BxzVaNXLiT3BlbkFJRR0Fi9xPWMvNZHgJWdzX
+#spring.ai.openai.chat.options.model=gpt-3.5-turbo
+#spring.ai.openai.chat.options.temperature=0.7
 
+spring.ai.ollama.chat.options.model=llama3.1
 
-# Admin User's profile -
-tinderai.character.user={id:'user', firstName:'Mohamed', lastName:'Shika', age:31, ethnicity:'White', gender:'MALE', bio:'Full Stack Engineer. I like traveling and playing soccer games.', imageUrl:'user.jpg', myersBriggsPersonalityType:'INTP'}
+# Admin User's profile
+dateSphire.ai.admin.user={id:'user', firstName:'Mohamed', lastName:'Shika', age:31, ethnicity:'White', gender:'MALE', bio:'Full Stack Engineer. I like traveling and playing soccer games.', imageUrl:'user.jpg', myersBriggsPersonalityType:'INTP'}
+dateSphire.ai.lookingForGender=FEMALE
+dateSphire.ai.initializeProfile=true
